# pyrsonalizer

./: actions.py  const.py  errors.py  execution_context.py  execution_graph.py  execution_tree.py  graph_parser.py  main.py  node_parsers.py  pyproject.toml  tree_parser.py  utils.py
.circleci/: config.yml
e2e-tests/: e2e_tests.py  e2e_utils.py
e2e-tests/test-configs/: github_file_sync.yml  github_file_sync__existing_file.yml  local_file_sync.yml  local_file_sync__bad_dep.yml
e2e-tests/test-configs/macos/: inline_installation_and_file_sync.yml
e2e-tests/test-configs/ubuntu/: inline_installation_and_file_sync.yml
tests/: test_actions.py  test_execution_graph.py  test_graph_parser.py  test_node_parsers.py  test_tree_parser.py  test_utils.py
