[tool.poetry]
name = "pyrsonalizer"
version = "0.1.0"
description = ""
authors = ["James Urban <jurban34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
PyYAML = "^5.4.1"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
GitPython = "^3.1.14"
validators = "^0.18.2"
prompt-toolkit = "^3.0.16"
distro = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
